<resources>
    <string name="app_name">Groceriio</string>
    <string name="login_logo">Groceriio</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="success_subtext">Congratulations! Your account has been created. Kindly check your inbox to confirm your account!</string>
    <string name="success_titletext">Registered Successfully!</string>
    <string name="success_logo">Success Logo</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_register_fail">RegisterFailActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fail_titletext">Account Not Verified</string>
    <string name="fail_subtext">Your account has not been verified. Please check your inbox again or request a new email.</string>
    <string name="fail_resend">Resend Verification Email</string>
    <string name="back">Back</string>
    <string name="map_logo">map-logo</string>
    <string name="current_location">Current Location</string>
    <string name="order_accepted_titletext">Your order has been accepted!</string>
    <string name="order_accepted_subtext">Your order has been placed and is being processed!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="collection_location">Collection Location</string>
    <string name="address">Address</string>
    <string name="current_address">Current address</string>
    <string name="destination_address">Destination address</string>
    <string name="divider">Divider</string>
    <string name="product_details">Product Details</string>
    <string name="search_icon">Search Icon</string>
    <string name="int_input">1</string>
    <string name="price_input">$32</string>
    <string name="search">Search</string>
    <string name="search_input">Search Input</string>
    <string name="nearest_store">Nearest Store</string>
    <string name="search_location">Search Location</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="metric">Metric</string>
    <string name="brand">Brand</string>
    <string name="nutrition">Nutrition</string>
    <string name="nutrition_info">Nutrition Info</string>
    <string name="product_info">Product Info</string>
    <string name="product_image">Product Image</string>
    <string name="plus_sign">Plus Sign</string>
    <string name="minus_sign">Minus Sign</string>
    <string name="delete_item">Delete Item</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="shopping_list">Shopping List</string>
    <string name="total_title">Total:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="stock_title">Stock:</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="categories">Categories</string>
    <string name="api">AIzaSyD1lWBGMBAXuzjn1qGZePLJ4haRgSKhJJU</string>
</resources>
