<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollectionLocationActivity">

    <Button
        android:id="@+id/collectBackBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/collectTitleText"
        android:layout_width="245dp"
        android:layout_height="26dp"
        android:text="@string/collection_location"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/collectBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/collectBackBtn" />

    <TextView
        android:id="@+id/collectNearestText"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/md_theme_dark_background"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="The nearest outlet is:" />

    <TextView
        android:id="@+id/collectAddrText"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectNearestText" />

    <ImageView
        android:id="@+id/collectDivider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectAddrText"
        app:srcCompat="@drawable/divider_line"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/collectStartAddr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:text="@string/current_address"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_dest_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectDivider" />

    <TextView
        android:id="@+id/collectEndAddr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/destination_address"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectStartAddr" />

    <Button
        android:id="@+id/collectOrderConfirmBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:text="@string/confirm_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectEndAddr" />

</androidx.constraintlayout.widget.ConstraintLayout>