<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/list_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/listItemName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/product_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/listItemRemove"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/listItemRemove"
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_baseline_close_24"
                    android:contentDescription="@string/delete_item"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <ImageView
                    android:id="@+id/listItemImage"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/product_image"
                    android:src="@drawable/groceriio_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/listItemImage"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/productPgMinus"
                        style="@style/Widget.Material3.Button.Icon"
                        android:layout_width="48dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_baseline_remove_24"
                        android:contentDescription="@string/minus_sign"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/listItemQuant"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/listItemQuant"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:background="@drawable/quantity_rectangle"
                        android:gravity="center"
                        android:text="@string/int_input"
                        android:textAlignment="center"
                        android:textColor="#A1887F"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/productPgMinus"
                        app:layout_constraintDimensionRatio="h,1:1"
                        app:layout_constraintEnd_toStartOf="@+id/productPgPlus"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/productPgMinus"
                        app:layout_constraintTop_toTopOf="@+id/productPgMinus"
                        tools:ignore="TextContrastCheck" />

                    <Button
                        android:id="@+id/productPgPlus"
                        style="@style/Widget.Material3.Button.Icon"
                        android:layout_width="48dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_baseline_add_24"
                        android:contentDescription="@string/plus_sign"
                        app:layout_constraintBottom_toBottomOf="@+id/listItemQuant"
                        app:layout_constraintEnd_toStartOf="@+id/listItemQuant"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/listItemQuant"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/listItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/price_input"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>